# ai-nexus

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Scope.md  TODO.md  WARP.md  agno.db  commit.ts  design.pen  dev.ts  example_conversation_page.tsx  example_conversation_route.tsx  example_create_conversation.tsx  justfile  package.json  repomix.config.json  tasks.ts
.beans/: ai-nexus-126i--create-pydantic-settings-config-module.md  ai-nexus-18xt--epic-12-responsive-mobile.md  ai-nexus-2uyu--pass-selected-model-id-from-frontend-to-backend-ch.md  ai-nexus-3ghd--epic-13-data-management.md  ai-nexus-3hfm--add-history-reader-and-utility-agent-factories-to.md  ai-nexus-3i2d--epic-custom-model-selector-ui.md  ai-nexus-3vq8--build-delete-conversation-and-bulk-delete.md  ai-nexus-4ucp--build-api-key-management-endpoints.md  ai-nexus-5615--epic-9-personas-system.md  ai-nexus-5e5d--epic-5-theme-system-dark-mode.md  ai-nexus-5jpe--add-regenerate-with-different-model.md  ai-nexus-5ljp--build-mcp-server-manager.md  ai-nexus-6k3a--build-custom-model-selector-dropdown-popover-style.md  ai-nexus-7k7w--epic-3-multi-model-provider-system.md  ai-nexus-88fq--add-anthropic-claude-provider.md  ai-nexus-93co--sprint-g-finishing.md  ai-nexus-93fu--update-database-initialization-for-new-models.md  ai-nexus-h10p--sprint-f-personalization.md  (+56 more)
backend/: agno.db  ago-agent.py  main.py  pyproject.toml
backend/app/: db.py  models.py  schemas.py  users.py
backend/app/api/: chat.py  conversations.py  models.py
backend/app/core/: agents.py  config.py
backend/app/crud/: conversation.py  message.py
(+118 files in other folders)
